[package]
name = "aoc2016"
version = "0.1.0"
authors = ["Mart Oruaas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1.4.2"
md5 = "0.7.0"
md52 = { package = "md-5", version = "0.9.1" }
multimap = "0.8.2"
